# dune-navier-stokes-two-phase

./: .gitmodules  CMakeLists.txt  LICENSE.md  README  README.md  config.h.cmake  dune-navier-stokes-two-phase.pc.in  dune.module
cmake/modules/: AddGMSHFlags.cmake  CMakeLists.txt  DuneNavierStokesTwoPhaseMacros.cmake  FindGMSH.cmake
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/navier-stokes-two-phase/: CMakeLists.txt  navier-stokes-two-phase.hh
src/: .gitignore  CMakeLists.txt  alugrid.cfg  assembleforcingterm.hh  assembleinterfacerhs.hh  assemblepressurerhs.hh  assemblevelocityrhs.hh  barycentricentitysearch.hh  boundarycondition.hh  bubblestatistics.hh  bulkcouplingrhs.hh  bulkpressurerhs.hh  bulkpressurevelocityoperator.hh  bulkvelocityoperator.hh  bulkvelocitypressureoperator.hh  bulkvelocityrhs.hh  compute.hh  correctionpressurerhsnondivergencefree.hh  correctionvelocityrhsnondivergencefree.hh  coupledmeshmanager.hh  coupledoperatorwrapper.hh  curvaturevelocityoperator.hh  differentmeshlocalevaluator.hh  dune-navier-stokes-two-phase.cc  extendedtuplediscretefunction.hh  femscheme.hh  femtraits.hh  fluidstate.hh  gmshcompoundmanager.hh  gnuplotwriter.hh  gridparthelper.hh  indicatorfunction.hh  interfacecouplingrhs.hh  interfacecurvaturedisplacementoperator.hh  interfacedisplacementoperator.hh  interfacedisplacementrhs.hh  interfaceoperator.hh  interfacerhs.hh  massmatrix.hh  meshsmoothing.hh  (+18 more)
